# 14-

./: .md  2_2.txt  2_3.txt  CMakeLists.txt  README.md  main.c
libs/: CMakeLists.txt  test1.h
libs/algorithms/: CMakeLists.txt  algorithm.c  algorithm.h
libs/algorithms/array/: array.c  array.h  unordered.h  unordered_set.c
libs/algorithms/basic_functions/: basic_functions.c  basic_functions.h
libs/algorithms/Дискретка/: Дискретка.h  дискретка.c
libs/data_structures/: CMakeLists.txt
libs/data_structures/bitset/: bitset.c  bitset.h
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/vector/: vector.c  vector.h  vectorVoid.c  vectorVoid.h
libs/file/: tasks2.h
libs/file/tasks/: tasks1.h
libs/file/tasks/task1/: tasks1.h
libs/file/tasks/task10/: task10.h
libs/file/tasks/task2/: tasks2.h
libs/file/tasks/task3/: tasks3.h
libs/file/tasks/task4/: task4.h
libs/file/tasks/task6/: task6.h
libs/file/tasks/task7/: tasks7.h
libs/file/tasks/task8/: task8.h
libs/file/tasks/task9/: task9.h
libs/file/tasks/tasks/: task5.h
libs/generalized tasks of the semester/: tasks1.h  tasks10.h  tasks11.h  tasks2.h  tasks3.h  tasks4.h  tasks5.h  tasks6.h  tasks7.h  tasks8.h  tasks9.h
libs/strings/: CMakeLists.txt
libs/strings/string/: string_.c  string_.h  test.c  test.cpp
libs/strings/string/tasks/tasks1/: tasks1.c  tasks1.h
libs/strings/string/tasks/tasks10/: tasks10.c  tasks10.h
libs/strings/string/tasks/tasks11/: tasks11.c  tasks11.h
libs/strings/string/tasks/tasks12/: tasks12.c  tasks12.h
libs/strings/string/tasks/tasks13/: tasks13.c  tasks13.h
libs/strings/string/tasks/tasks14/: tasks14.c  tasks14.h
libs/strings/string/tasks/tasks15/: tasks15.c  tasks15.h
libs/strings/string/tasks/tasks16/: tasks16.c  tasks16.h
libs/strings/string/tasks/tasks17/: tasks17.c  tasks17.h
libs/strings/string/tasks/tasks18/: tasks18.c  tasks18.h
libs/strings/string/tasks/tasks19/: tasks19.c  tasks19.h
libs/strings/string/tasks/tasks2/: tasks2.c  tasks2.h
libs/strings/string/tasks/tasks3/: tasks3.c  tasks3.h
libs/strings/string/tasks/tasks4/: tasks4.c  tasks4.h
libs/strings/string/tasks/tasks5/: tasks5.c  tasks5.h
libs/strings/string/tasks/tasks6/: tasks6.c  tasks6.h
libs/strings/string/tasks/tasks7/: tasks7.c  tasks7.h
libs/strings/string/tasks/tasks8/: tasks8.c  tasks8.h
libs/strings/string/tasks/tasks9/: tasks9.c  tasks9.h
text labs 19/1 tasks/: 1_2.txt
text labs 19/10 tasks/first empty file/: 10_2.txt
text labs 19/10 tasks/order less product/: 10_1.txt  10_2.txt
text labs 19/10 tasks/order more product/: 10_1.txt
text labs 19/10 tasks/second empty file/: 10_1.txt
text labs 19/2 tasks/: 2_1.txt
text labs 19/3 tasks/: 3_2.txt  3_3.txt
text labs 19/4 tasks/: 4_3.txt
text labs 19/5 tasks/: 5_2.txt  5_3.txt
text labs 19/6 tasks/: 6_2.txt  6_3.txt
text labs 19/7 tasks/: 7_2.txt  7_4.txt
text labs 19/8 tasks/: 8_2.txt  8_3.txt  8_4.txt  8_5.txt
text labs 19/9 tasks/: 9_2.txt  9_3.txt
text labs 20/tasks 4/: 2.txt  3.txt
text labs 20/tasks9/: 1.txt  2.txt
