add_library(strings
        string/string_.c
        string/string_.h
        string/test.c
        string/tasks/tasks1/tasks1.h
        string/tasks/tasks2/tasks2.h
        string/tasks/tasks3/tasks3.h
        string/tasks/tasks4/tasks4.h
        string/tasks/tasks5/tasks5.h
        string/tasks/tasks6/tasks6.h
        string/tasks/tasks7/tasks7.h
        string/tasks/tasks8/tasks8.h
        string/tasks/tasks9/tasks9.h)