add_library(strings
        string/string_.c
        string/string_.h
        string/test.c
        string/tasks/tasks1/tasks1.h
        string/tasks/tasks2/tasks2.h
        string/tasks/tasks3/tasks3.h
        string/tasks/tasks4/tasks4.h
        string/tasks/tasks5/tasks5.h
        string/tasks/tasks6/tasks6.h
        string/tasks/tasks7/tasks7.h
        string/tasks/tasks8/tasks8.h
        string/tasks/tasks9/tasks9.h
        string/tasks/tasks10/tasks10.h
        string/tasks/tasks11/tasks11.h
        string/tasks/tasks12/tasks12.h
        string/tasks/tasks13/tasks13.h
        string/tasks/tasks14/tasks14.h
        string/tasks/tasks15/tasks15.h
        string/tasks/tasks16/tasks16.h
        string/tasks/tasks17/tasks17.h)